[package]
name = "metaballs"
version = "0.1.0"
authors = ["CerulanLumina <CerulanLumina@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
structopt = "0.3.21"
rand = "0.8.4"
pixels = "0.4.0"
winit = "0.25.0"
lazy_static = "1.4.0"
winit_input_helper = "0.10.0"